--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,8 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
+    "start": "node ./index.js",
+    "dev": "nodemon ./index.js",
     "test": "NODE_OPTIONS=--experimental-vm-modules npx jest"
   },
   "repository": {
@@ -18,10 +20,13 @@
   },
   "homepage": "https://github.com/adriasala12/albumgrid#readme",
   "dependencies": {
+    "compression": "^1.7.4",
+    "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "node-fetch": "^3.1.0"
   },
   "devDependencies": {
-    "jest": "^27.4.5"
+    "jest": "^27.4.5",
+    "nodemon": "^2.0.15"
   }
 }
